2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_mem): Fix memleak.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_mem):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_load_file):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_load_file): Fix reading file from
	POKEDATADIR.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Sectioning changes.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_get_next_match):
	Remove superfluous malloc within loop.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: syntax-check fixes.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Modifying SBM Images): Updated to cover mapped
	vs. non-mapped values.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Modifying SBM Images): Renamed from `Cropping SBM
	Images'.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_init):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-hserver.c (pk_hserver_make_hyperlink):
	Simplify malloc/strlen/strcpy/strcat with asprintf.
	(pk_hserver_init): Remove writing to hserver_port_str.
	(hserver_port_str): Remove variable.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Flatten the sectioning, removing superfluous
	nodes containing only menus.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (The Bugzilla): New section.
	(Dealing with spam in the Bugzilla): Likewise.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Add gnulib module stdbool.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-hserver.c (hserver_tokens): Fix type to bool.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: List gnulib modules in alphabetical order.
